manifests/01_simple_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 859133351452.dkr.ecr.eu-west-1.amazonaws.com/backend:v0.0.1
        ports:
        - containerPort: 3000
